# nexusid-agent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.example.yml
.github/workflows/: e2e.yml  release.yml
packaging/: SIGNING.md  install.ps1  install.sh
packaging/chocolatey/: nexus-agent.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/winget/: NexusID.Agent.installer.yaml  NexusID.Agent.locale.en-US.yaml  NexusID.Agent.yaml
src/: ad_e2e.rs  audit.rs  config.rs  crypto.rs  error.rs  main.rs  runner.rs  server.rs  service.rs
src/connectors/: db.rs  ldap.rs  mod.rs
src/modes/: ad.rs  db.rs  mod.rs
wix/: main.wxs
