[package]
name = "nexus-agent"
version = "0.1.1"
edition = "2021"
rust-version = "1.78"
description = "NexusID hybrid sync agent — AD/LDAP and database connector with egress↔ingress to the broker, encrypted credentials, and a tamper-evident local event log."
license = "Proprietary"

[[bin]]
name = "nexus-agent"
path = "src/main.rs"

[features]
# Default build is portable (no system Kerberos/GSSAPI libs required) so it compiles everywhere.
default = ["db"]
# DB connector (sqlx). On by default; turn off for an AD-only, lighter build.
db = ["dep:sqlx"]
# SASL/GSSAPI (Kerberos) bind for AD. Requires system GSSAPI libs at build time; off by default.
kerberos = ["ldap3/gssapi"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "any", "postgres", "mysql", "sqlite", "chrono", "json"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
gethostname = "0.5"
