[package]
name = "nexus-agent"
version = "0.1.3"
authors = ["NexusID <support@nexusid.ai>"]
edition = "2021"
rust-version = "1.78"
description = "NexusID hybrid sync agent — AD/LDAP and database connector with egress↔ingress to the broker, encrypted credentials, and a tamper-evident local event log."
license = "Proprietary"

[[bin]]
name = "nexus-agent"
path = "src/main.rs"

# Linux .deb (cargo-deb): installs the binary + systemd unit + example config.
[package.metadata.deb]
maintainer = "NexusID <support@nexusid.ai>"
copyright = "NexusID"
extended-description = "On-prem sync agent for hybrid AD/LDAP and database provisioning with the NexusID broker."
section = "admin"
priority = "optional"
assets = [
    ["target/release/nexus-agent", "usr/bin/", "755"],
    ["dist/nexus-agent.service", "lib/systemd/system/", "644"],
    ["config.example.toml", "etc/nexus-agent/config.example.toml", "644"],
]
conf-files = ["/etc/nexus-agent/config.example.toml"]

# Windows .msi (cargo-wix): run `cargo wix init` once to generate wix/main.wxs, then `cargo wix`.
[package.metadata.wix]
upgrade-guid = "5F8C2E1A-9B4D-4C7E-A2F1-7D3E9C5B1A20"
path-guid = "6A9D3F2B-0C5E-4D8F-B3A2-8E4FAD6C2B31"

[features]
# Default build is portable (no system Kerberos/GSSAPI libs required) so it compiles everywhere.
default = ["db"]
# DB connector (sqlx). On by default; turn off for an AD-only, lighter build.
db = ["dep:sqlx"]
# SASL/GSSAPI (Kerberos) bind for AD. Requires system GSSAPI libs at build time; off by default.
kerberos = ["ldap3/gssapi"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "any", "postgres", "mysql", "sqlite", "chrono", "json"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
gethostname = "0.5"

# Windows Service support (run under the SCM, like the systemd unit / launchd plist elsewhere).
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
